Updated portfolio website content

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#achievements">Achievements</a></li>
+                <li><a href="#courses">Courses</a></li>                
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -61,13 +62,22 @@
             <p>I also sharpened my soft skills like communication, presentation, time punctuation, working under pressure while meeting deadlines, etc.</p>
         </section>
 
+        <section id="courses">
+            <h2>Courses</h2>
+            <ol>
+                <li>Udacity: <a href="https://graduation.udacity.com/confirm/2LLKCLP3">AI Programming with Python Nanodegree</a></li>
+                <li>Coursera: <a href="https://coursera.org/verify/specialization/R3TXGPXDJLNK">Machine Learning by Stanford University & DeepLearning.AI</a></li>
+                <li>Hubspot Academy: Utilizing Marketing Automation and Artificial Intelligence</li>
+            </ol>
+        </section>
+
         <section id="achievements">
             <h2>Achievements</h2>
             <ul>
                 <li>Took part in ACM India hosted Winter School on Optimization in Machine Learning and operational research at IIT Goa</li>
                 <li>Participated in AWS DeepRacer Student League competition which resulted in qualifying for AWS AI and ML Scholarship for Udacity AI Programming with Python Nanodegree program worth $4,000</li>
                 <li>Leaded team to finals of SSIP AAM Hackathon 2022 organized by the Education Department, Government of Gujarat</li>
-                <li>Passionate about data structures and algorithms, 200+ coding score in GeeksforGeeks - <a href="https://www.geeksforgeeks.org/user/yashbambhroliya1">Profile Link</a></li>
+                <li>Passionate about data structures and algorithms, 200+ coding score in GeeksforGeeks - <a href="https://auth.geeksforgeeks.org/user/yashbambhroliya7">Profile Link</a></li>
                 <li>An active member of the National Service Scheme (NSS), contributing to society while developing social skills</li>
             </ul>
         </section>
