Updated portfolio website content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 id="header" class="animated">Yash Bambhroliya</h1>
+        <h1 id="header" class="animated" style="display: flex; justify-content: center;">Yash Bambhroliya</h1>
         <nav id="left-panel">
             <!-- <h1>Yash Bambhroliya</h1> -->
             <ul>
