Updated portfolio website content

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <header>
-        <h1 id="header" class="animated" style="display: flex; justify-content: center;">Yash Bambhroliya</h1>
+        <h1 id="header" class="animated">Yash Bambhroliya</h1>
         <nav id="left-panel">
-            <!-- <h1>Yash Bambhroliya</h1> -->
             <ul>
                 <li><a href="#about">About</a></li>
                 <br>
@@ -39,7 +38,7 @@
             <div class="project-class">
                 <h3>Image Classification using Deep Learning</h3>
                 <p>The project includes developing, building, and training image classifier with deep-learning techniques.</p>
-                <p>Technologies: Python, PyTorch, neural networks, transfer learning, data preprocessing, model selection, model training and evaluation, fine-tuning, model deployment.</p>
+                <p>Technologies: Python, PyTorch, Neural Networks, Transfer Learning, Data Preprocessing, Model Selection, Model Training and Evaluation, Fine-tuning, Model Deployment.</p>
             </div>
             
             <div class="project-class">
@@ -97,7 +96,17 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: yashbambhroliya1@gmail.com</p>
+            <div class="icon-container">
+                <a href="mailto:yashbambhroliya1@gmail.com" target="mailto:yashbambhroliya1@gmail.com" class="mail-icon">
+                    <img src="https://cdn-icons-png.flaticon.com/512/281/281769.png" alt="Mail" width="50" height="50">
+                </a>
+                <a href="https://github.com/Yash-Bambhroliya" target="_blank" class="github-icon">
+                    <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" width="50" height="50">
+                </a>
+                <a href="https://www.linkedin.com/in/yash-bambhroliya-6c8542/" target="_blank" class="linkedin-icon">
+                    <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" width="50" height="50">
+                </a>
+            </div>
         </section>
     </main>
 
