--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <svg viewBox="0 0 1890 370">
   
             <!-- BACKGROUND IMAGE - visible -->
-            <image xlink:href="images/banner2.jpg" width="1890" x=0 height="370" y=0 ></image>
+            <image xlink:href="images/p2.png" width="1890" x=0 height="370" y=0 ></image>
             
             <!-- DISTORTION IMAGE - clipped -->
-            <image xlink:href="images/banner2.jpg" width="1890" x=0 height="370" y=0 clip-path="url(#clip)" filter= "url(#distortion)"></image>
+            <image xlink:href="images/p2.png" width="1890" x=0 height="370" y=0 clip-path="url(#clip)" filter= "url(#distortion)"></image>
             
             <!-- TEXT - clipped -->
             <clipPath id="clip">
@@ -204,7 +204,7 @@
     <svg>
         <filter id="distortion">
             <feTurbulence type="turbulence" baseFrequency="0.05" numOctaves="2" result="turbulence"/>
-            <feDisplacementMap in2="turbulence" in="SourceGraphic" scale="20" xChannelSelector="R" yChannelSelector="G"/>
+            <feDisplacementMap in2="turbulence" in="SourceGraphic" scale="15" xChannelSelector="R" yChannelSelector="G"/>
         </filter>
 
         <filter id="textFilter">        
